# gtest_sample

./: BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  add.cpp  add.h  add_mock.h  add_test.cpp  addtest_fixture.cpp  addtest_fixture.h  calculator.cpp  calculator.h  calculator_mock.h  calculator_test.cpp  calculator_test_fixture.cpp  calculator_test_fixture.h  gtest_summary.md  main.cpp
