load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
#指定该包对其他包可见
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "add",
    srcs = ["add.cpp"],
    hdrs = ["add.h"],
)

cc_library(
    name = "calculator",
    srcs = ["calculator.cpp"],
    hdrs = ["calculator.h"],
    deps = [ 
        "//:add",
    ],  
)

cc_library(
    name = "calculator_test_fixture",
    srcs = ["calculator_test_fixture.cpp"],
    hdrs = ["calculator_test_fixture.h"],
    deps = [
        "//:add",
        "//:calculator",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [
        "//:add",
        "//:calculator",
    ],
)

cc_test(
    name = "calculator_test",
    srcs = ["calculator_test.cpp"],
    deps = [
        "//:calculator_test_fixture",
        "@googletest//:gtest_main",
    ],
)

